Fix button stacking in gdpr banner on mobile devices

--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -39,6 +39,11 @@ body {
 	color: white;
 }
 
+.cookieConsent__Right {
+	display: inherit;
+	align-items: flex-end;
+}
+
 .columns-section {
 	position: relative;
 }
